style: 💄 Correction menu animation mobile

--- a/src/components/03 - Organisms/Navigation/Navigation.scss
+++ b/src/components/03 - Organisms/Navigation/Navigation.scss
@@ -3,6 +3,7 @@
   top: 10rem;
   left: 0;
   width: 100%;
+  margin-top: var(--spacing-l);
 
   &__container {
     display: flex;
