--- a/src/components/04 - Templates/Header/Header.scss
+++ b/src/components/04 - Templates/Header/Header.scss
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  z-index: 99999;
 
   &::after {
     content: "";
@@ -17,7 +18,7 @@
 
   &--open {
     &::after {
-      clip-path: circle(200vh at calc(100% - 6rem) 5rem);
+      clip-path: circle(200vmax at calc(100% - 6rem) 5rem);
     }
   }
 
